bug: fixing blurry bold fonts

--- a/src/src/app/common/components/logo/logo.scss
+++ b/src/src/app/common/components/logo/logo.scss
@@ -20,7 +20,7 @@
   color: $font-color;
 
   &__container {
-    font-weight: 600;
+    font-weight: 900;
     overflow: hidden;
     height: 40px;
     padding: 0 40px;
