--- a/src/src/app/common/components/twitch-login/twitch-login.scss
+++ b/src/src/app/common/components/twitch-login/twitch-login.scss
@@ -11,7 +11,7 @@
   height: 40px;
   background: rgb(191, 148, 255);
   color: $background-color;
-  font-weight: bold;
+  font-weight: 900;
   border-radius: 3px;
   cursor: pointer;
 }
