--- a/src/src/app/view/contact-us/components/contact-us-list/contact-us-list.scss
+++ b/src/src/app/view/contact-us/components/contact-us-list/contact-us-list.scss
@@ -32,7 +32,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-weight: bold;
+  font-weight: 900;
   font-size: 1.1em;
   color: $font-color;
   padding: 0;
