--- a/src/src/app/view/twitch/twitch-bot-index/twitch-bot-index.scss
+++ b/src/src/app/view/twitch/twitch-bot-index/twitch-bot-index.scss
@@ -69,7 +69,7 @@ app-loading-icon {
 
 .title-live {
   font-size: 24px;
-  font-weight: bold;
+  font-weight: 900;
   margin-top: 20px;
   margin-bottom: 10px;
 }
