--- a/src/src/app/view/vm-manager/vm-manager.scss
+++ b/src/src/app/view/vm-manager/vm-manager.scss
@@ -17,7 +17,7 @@
 
 .status-text {
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 900;
   margin-top: 2px;
   color: $font-color;
 }
